<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".LoginActivity">
    android:background="@color/jobs_secundario"
    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/editSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/Senha"
        android:inputType="numberPassword" />



    <Button
        android:id="@+id/logar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:onClick="logar"
        android:text="@string/logar" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:layout_gravity="center"
        android:text="@string/ainda_nao_cadastro"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:backgroundTint="@color/jobs_secundario"
        android:text="@string/crie_sua_conta"
        android:onClick="irParaCriarConta"/>

    <Button
        android:id="@+id/cancelarDivulgacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cancelar"
        android:layout_gravity="center"
        android:onClick="cancelar"/>

</LinearLayout>
