<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/jobs_secundario"
    tools:context=".CandidatarVagaActivity">
    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="Candidate-se"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editEmailCandidato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/textCandidatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/candidatar_se"
        android:onClick="vincularCandidatoVaga"/>

    <Button
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cancelar"
        android:onClick="cancelar"/>

</LinearLayout>